--- a/.htaccess
+++ b/.htaccess
@@ -5,4 +5,4 @@ RewriteEngine on
 RewriteCond $1 !^(index\.php|images|robots\.txt)
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.*)$ /sifi/index.php/$1 [L,QSA]
+RewriteRule ^(.*)$ /sisPan/index.php/$1 [L,QSA]
